fix: express checkout height on mobile

--- a/styles/express-checkout.scss
+++ b/styles/express-checkout.scss
@@ -83,6 +83,8 @@ $sticky-checkout-padding: 20px;
   left: 0;
   bottom: 0;
   padding: 40px 10px;
+  height: 75vh;
+  overflow: auto;
 
   @include breakpoint('md') {
     height: 50vh;
@@ -96,7 +98,7 @@ $sticky-checkout-padding: 20px;
     gap: 32px;
     padding: 10px;
     width: 100%;
-    height: 100%;
+    overflow: auto;
 
     .yc-product-card {
       width: 100%;
@@ -105,7 +107,6 @@ $sticky-checkout-padding: 20px;
 
     .checkout-form {
       width: 100%;
-      overflow: auto;
       height: 100%;
     }
 
